--- a/src/cssStyling/home.css
+++ b/src/cssStyling/home.css
@@ -10,10 +10,11 @@
 ul {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 0.5em;
+  list-style: none;
 }
 
 ul.article-card {
-  border: solid 1px;
+  border: solid 1px black;
   margin: 10px;
   padding-bottom: 30px;
   background-color: rgba(246, 236, 236, 0.849);
