--- a/src/cssStyling/Comments.css
+++ b/src/cssStyling/Comments.css
@@ -120,3 +120,14 @@
   opacity: 0.3;
   cursor: default;
 }
+
+.comment-delete {
+  margin-left: 2vw;
+  margin-right: 1vw;
+}
+.comment-delete:hover > button {
+  background-color: red;
+}
+.comment-delete:hover {
+  color: red;
+}
