--- a/src/cssStyling/Home.css
+++ b/src/cssStyling/Home.css
@@ -1,10 +1,31 @@
-.article-container {
+.para-container {
+  display: flex;
+  margin-left: 5%;
+  justify-content: center;
+}
+.home-para {
+  border: solid 1px black;
+  margin-top: 15px;
+  margin-bottom: 10px;
+}
+.home-topics-bar {
+  width: 100%;
+}
+
+.filter-bar {
+  display: flex;
   width: 90%;
-  height: 90%;
+  margin: 0 1vw 1vw;
+}
+
+.article-container {
+  width: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   border: solid blueviolet 1px;
   flex-wrap: wrap;
+  overflow-y: scroll;
 }
 
 ul {
@@ -17,16 +38,13 @@ ul {
   border: solid 1px black;
   margin: 10px;
   padding-bottom: 0px;
-  background-color: rgb(191, 212, 150);
+  background-color: rgb(185, 185, 185);
   list-style-type: none;
   border-radius: 10px;
+  width: 80vw;
   height: 85%;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-/* .article-card-link {
-  text-decoration: none;
-
-} */
 
 .article-card-link {
   text-decoration: none;
@@ -100,46 +118,4 @@ div.article-container {
 .profile-name {
   transform: translate(-50%, -50%);
   font-size: xx-small;
-}
-
-.dropdown {
-  position: relative;
-}
-
-.sort-by-menu {
-  position: absolute;
-  list-style-type: none;
-  margin: 5px 0;
-  padding: 0;
-  border: 1px solid grey;
-  width: fit-content;
-  background-color: olivedrab;
-}
-
-.sort-by-menu > li {
-  margin: 0;
-  background-color: white;
-}
-
-.sort-by-menu > li:hover {
-  background-color: rgb(94, 205, 15);
-}
-
-.sort-by-menu > li > button {
-  text-align: left;
-  width: fit-content;
-  background: none;
-  color: inherit;
-  border: none;
-  padding: 5px;
-  margin: 0;
-  font: inherit;
-  cursor: pointer;
-}
-
-.dropdown {
-  display: flex;
-  gap: 1vw;
-  width: fit-content;
-  margin-left: 3vw;
 }
