--- a/src/cssStyling/TopicsBar.css
+++ b/src/cssStyling/TopicsBar.css
@@ -3,18 +3,74 @@
   flex-direction: row;
   vertical-align: middle;
   border: solid 1px black;
-  margin: 10px;
   border-radius: 10px;
+  width: 100%;
+  height: 8vh;
 }
 
 .topic-card {
   border-radius: 10px;
-  max-width: 7em;
-  padding: 0.2em;
-  margin: 0.2em;
+  border: solid 1px black;
   text-align: center;
   display: flex;
   flex-direction: column;
-  vertical-align: middle;
   justify-content: space-evenly;
+  margin-top: 1.5vh;
+  margin-left: 2vw;
+  margin-right: 2vw;
+  margin-bottom: 0vh;
+  padding: 1vw;
+}
+
+.dropdown {
+  position: relative;
+}
+.sort-buttons {
+  border: solid blueviolet 2px;
+  height: 8vh;
+}
+.sort-button {
+  margin: 0 0.5vh 0.5vh;
+  padding: 1vh;
+  border: solid rgb(81, 22, 136) 2px;
+}
+.clear-button {
+  margin: 0 1vh 1vh;
+  padding: 1vh;
+  border: solid blueviolet 2px;
+}
+.sort-by-menu {
+  position: absolute;
+  margin: 5px 0;
+  border: 1px solid rgb(27, 27, 27);
+  width: fit-content;
+}
+
+.sort-by-menu > li {
+  background-color: orange;
+  align-content: center;
+  color: blue;
+}
+
+.sort-by-menu > li:hover {
+  background-color: rgb(94, 205, 15);
+}
+
+.sort-by-menu > li > button {
+  text-align: center;
+  width: fit-content;
+  color: inherit;
+  border: none;
+  padding: 0.5vh;
+  font: inherit;
+  cursor: pointer;
+  background-color: orange;
+}
+
+.dropdown {
+  display: flex;
+  gap: 1vw;
+  width: fit-content;
+  padding: 2vh;
+  border: solid blueviolet 1px;
 }
