--- a/src/cssStyling/TopicsBar.css
+++ b/src/cssStyling/TopicsBar.css
@@ -1,76 +1,49 @@
 .topics-bar {
   display: flex;
+  justify-content: "space-around";
+  align-items: center;
   flex-direction: row;
   vertical-align: middle;
-  border: solid 1px black;
+
   border-radius: 10px;
+  margin-right: 5vw;
+  margin-left: 4vw;
   width: 100%;
-  height: 8vh;
+  height: 10vh;
+  overflow-x: scroll;
+}
+
+.topics-h3 {
+  margin: 3vh 2vh 2vh 2vh;
+  font-size: 3vh;
+  justify-content: center;
 }
 
 .topic-card {
   border-radius: 10px;
-  border: solid 1px black;
+  background-color: bisque;
+  border: 3px solid var(--primary-color);
   text-align: center;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  margin-top: 1.5vh;
   margin-left: 2vw;
   margin-right: 2vw;
-  margin-bottom: 0vh;
   padding: 1vw;
+  transition: 0.3s ease-in-out;
 }
-
-.dropdown {
-  position: relative;
-}
-.sort-buttons {
-  border: solid blueviolet 2px;
-  height: 8vh;
-}
-.sort-button {
-  margin: 0 0.5vh 0.5vh;
-  padding: 1vh;
-  border: solid rgb(81, 22, 136) 2px;
-}
-.clear-button {
-  margin: 0 1vh 1vh;
-  padding: 1vh;
-  border: solid blueviolet 2px;
-}
-.sort-by-menu {
-  position: absolute;
-  margin: 5px 0;
-  border: 1px solid rgb(27, 27, 27);
-  width: fit-content;
-}
-
-.sort-by-menu > li {
-  background-color: orange;
-  align-content: center;
-  color: blue;
-}
-
-.sort-by-menu > li:hover {
-  background-color: rgb(94, 205, 15);
-}
-
-.sort-by-menu > li > button {
-  text-align: center;
-  width: fit-content;
-  color: inherit;
-  border: none;
-  padding: 0.5vh;
-  font: inherit;
-  cursor: pointer;
+.topic-card:hover {
   background-color: orange;
 }
 
-.dropdown {
-  display: flex;
-  gap: 1vw;
-  width: fit-content;
-  padding: 2vh;
-  border: solid blueviolet 1px;
+.topic-card-link {
+  text-decoration: none;
+}
+
+@media screen and (min-width: 280px) and (max-width: 1080px) {
+  .topic-card {
+    margin-left: 1vw;
+    margin-right: 2vw;
+    padding: 3vw;
+  }
 }
