--- a/src/cssStyling/Comments.css
+++ b/src/cssStyling/Comments.css
@@ -1,49 +1,66 @@
+.comments {
+  display: flex;
+  flex-direction: row;
+  width: 80%;
+  margin: 0 10%;
+}
+
 .article-comment-container {
-  border: 4px solid green;
   overflow: auto;
-  height: 20pc;
+  height: 40vh;
+  width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 0.2rem;
+  gap: 1rem;
+  margin: 2vw;
+  justify-content: space-between;
+  overflow-y: scroll;
+  border: 1px solid rgb(220, 139, 52);
+  border-radius: 5px;
 }
 
 .comment-card {
-  border: 1px solid red;
+  border: 1px solid rgb(220, 139, 52);
   border-radius: 5px;
-  block-size: auto;
+  display: flex;
+  margin-left: 2vw;
+  margin-right: 2vw;
+  background-color: rgb(245, 242, 237);
 }
-.comments {
-  margin-top: 20px;
-}
+
 .comments-title {
   font-size: 10px;
   margin-bottom: 10px;
 }
 
 .comments-container {
-  margin-top: 40px;
-}
-.comment-card {
-  display: flex;
-  margin-bottom: 1px;
+  margin: 2vh;
+  border-radius: 10px;
 }
 
 .comment-image-container {
-  margin-right: 12px;
+  margin-right: 1vw;
+  margin-top: 1vh;
+  display: flex;
+  flex-direction: row;
 }
 
 .comment-image-container img {
-  margin-left: 5px;
+  margin: 0 3vw;
   height: 3vh;
   border-radius: 50px;
 }
 
 .comment-right-part {
-  width: 90%;
+  width: 94%;
+  margin: 0% 3%;
 }
 
 .comment-content {
   display: flex;
+  justify-content: space-between;
+  margin-top: 0.5vh;
+  align-items: center;
 }
 
 .comment-author {
@@ -52,13 +69,24 @@
   color: rgb(59, 130, 246);
 }
 .comment-date {
-  margin-right: 8px;
-  font-size: 15px;
+  margin-right: 1vw;
+  font-size: 2vh;
   color: rgb(7, 52, 123);
 }
 
 .comment-text {
   font-size: 10px;
+  color: rgb(7, 52, 123);
+  margin-top: 1vh;
+}
+
+.comment-metadata {
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 5vw;
+  margin-bottom: 1vw;
+  align-items: center;
+  background-color: rgb(212, 89, 36) 1px solid;
 }
 
 .comment-vote-count {
@@ -79,20 +107,23 @@
 /* Post comment form */
 
 .comment-form-title {
-  font-size: 15px;
+  font-size: 2vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .comment-submit {
   display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .comment-form-textarea {
-  width: 50%;
+  width: 100%;
   height: fit-content;
-  margin-bottom: 4px;
-  margin-top: 4px;
-  margin-right: 4px;
-  border: 1px solid rgb(210, 126, 47);
+  margin: 1vw;
   border-radius: 8px;
 }
 
@@ -101,7 +132,6 @@
   padding: 8px;
   margin-bottom: 4px;
   margin-top: 4px;
-
   background: rgb(147, 169, 205);
   border-radius: 8px;
   color: white;
@@ -113,21 +143,55 @@
 }
 
 .comment-form-button:enabled {
-  background: rgb(58, 88, 154);
+  background: rgb(207, 108, 32);
 }
 
 .comment-form-button:disabled {
-  opacity: 0.3;
+  opacity: 0.5;
   cursor: default;
+  background-color: orange;
 }
 
 .comment-delete {
-  margin-left: 2vw;
-  margin-right: 1vw;
+  font-stretch: wider;
+  font-size: 3vw;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+  width: 5vw;
+  background-color: none;
+}
+.comment-delete > button {
+  background-color: coral;
+  padding: 0.3vh;
+  border-radius: 5px;
+  border: 2px;
+  border-color: rgb(7, 52, 123);
+  font-size: 1.6vh;
 }
 .comment-delete:hover > button {
-  background-color: red;
+  background-color: rgb(174, 38, 38);
 }
 .comment-delete:hover {
-  color: red;
+  color: rgb(162, 35, 35);
+}
+
+@media screen and (min-width: 280px) and (max-width: 700px) {
+  .comments {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .article-comment-container {
+    border: 1px solid orange;
+    overflow: auto;
+    height: 20pc;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin: 6vw;
+    justify-content: space-between;
+    overflow-y: scroll;
+  }
 }
