--- a/src/cssStyling/TopicsBar.css
+++ b/src/cssStyling/TopicsBar.css
@@ -4,13 +4,14 @@
   align-items: center;
   flex-direction: row;
   vertical-align: middle;
-
-  border-radius: 10px;
   margin-right: 5vw;
   margin-left: 4vw;
   width: 100%;
   height: 10vh;
   overflow-x: scroll;
+  border-top: orange 1px dashed;
+  border-left: orange 1px dashed;
+  border-bottom: orange 1px dashed;
 }
 
 .topics-h3 {
@@ -40,10 +41,22 @@
   text-decoration: none;
 }
 
+.topic-title > h2 {
+  display: flex;
+  justify-content: center;
+  width: 90%;
+  margin: 0 5%;
+  font-size: 8vh;
+  margin-top: 2%;
+  margin-bottom: 2%;
+  transition: 0.3s ease-in-out;
+  color: orange;
+}
+
 @media screen and (min-width: 280px) and (max-width: 1080px) {
   .topic-card {
     margin-left: 1vw;
     margin-right: 2vw;
-    padding: 3vw;
+    padding: 2vw;
   }
 }
