--- a/src/cssStyling/Comments.css
+++ b/src/cssStyling/Comments.css
@@ -123,7 +123,8 @@
 .comment-form-textarea {
   width: 100%;
   height: fit-content;
-  margin: 1vw;
+  margin: 2vw;
+  padding: 2vw;
   border-radius: 8px;
 }
 
