--- a/src/cssStyling/TopicsBar.css
+++ b/src/cssStyling/TopicsBar.css
@@ -9,9 +9,8 @@
   width: 100%;
   height: 10vh;
   overflow-x: scroll;
-  border-top: orange 1px dashed;
+
   border-left: orange 1px dashed;
-  border-bottom: orange 1px dashed;
 }
 
 .topics-h3 {
@@ -28,9 +27,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  margin-left: 2vw;
-  margin-right: 2vw;
-  padding: 1vw;
+  margin: 0.5vh 2vh;
+  padding: 1.5vw;
   transition: 0.3s ease-in-out;
 }
 .topic-card:hover {
@@ -55,8 +53,7 @@
 
 @media screen and (min-width: 280px) and (max-width: 1080px) {
   .topic-card {
-    margin-left: 1vw;
-    margin-right: 2vw;
-    padding: 2vw;
+    margin: 2vh;
+    padding: 3vw;
   }
 }
