--- a/src/cssStyling/TopicsBar.css
+++ b/src/cssStyling/TopicsBar.css
@@ -8,8 +8,7 @@
   margin-left: 4vw;
   width: 100%;
   height: 10vh;
-  overflow-x: scroll;
-
+  overflow-y: scroll;
   border-left: orange 1px dashed;
 }
 
