--- a/src/cssStyling/TopicsBar.css
+++ b/src/cssStyling/TopicsBar.css
@@ -8,7 +8,7 @@
   margin-left: 4vw;
   width: 100%;
   height: 10vh;
-  overflow-y: auto;
+  overflow-x: auto;
   border-left: orange 1px dashed;
   background-color: none;
   padding-bottom: 0;
