--- a/src/cssStyling/Home.css
+++ b/src/cssStyling/Home.css
@@ -37,6 +37,7 @@
   align-items: center;
   overflow-y: scroll;
   background-color: rgb(143, 169, 194);
+  border: whitesmoke solid 2px;
   opacity: 0.9;
   border-radius: 10px;
 }
@@ -135,18 +136,26 @@ div.article-container {
   height: 5vh;
   width: 10rem;
   padding: 10px;
-  background-color: #daded4;
+  background-color: whitesmoke;
   border-radius: 10px;
   display: flex;
   flex-direction: row;
+  align-items: center;
   justify-content: space-between;
+  color: black;
+  transition: 0.3s ease-in-out;
 }
-.profile-button > .profile-name {
-  text-decoration: none;
+a {
   font-size: 2vh;
+  text-decoration: none;
+}
+.profile-button:hover {
+  background-color: orange;
+  color: black;
+  font-weight: bolder;
 }
 
 .profile-image {
   border-radius: 10px;
-  height: 100%;
+  height: 130%;
 }
