--- a/src/cssStyling/SortBar.css
+++ b/src/cssStyling/SortBar.css
@@ -30,10 +30,7 @@
   margin: 5px 0 5px;
   width: fit-content;
   z-index: 1;
-}
-.sort-bar > li {
-  align-content: center;
-  color: blue;
+  list-style: none;
 }
 
 .sort-bar > li:hover {
@@ -41,8 +38,15 @@
 }
 
 .sort-option > button {
-  background-color: rgb(247, 244, 50);
-  width: 23vw;
+  background-color: whitesmoke;
+  width: 110%;
+  border: 1px orange solid;
+  border-radius: 3px;
+}
+.sort-option > button:hover {
+  background-color: orange;
+  width: 110%;
+  color: black;
 }
 
 .sort-bar > li > button {
@@ -57,10 +61,8 @@
 .dropdown {
   display: flex;
   gap: 1.5vw;
-  width: fit-content;
   padding: 1vh;
   align-items: center;
-  background-color: rgb(218, 158, 84);
   border-radius: 40px;
 }
 
@@ -76,7 +78,7 @@
   }
   .sort-toggle {
     display: block;
-    color: orange;
+    color: whitesmoke;
     font-size: 4vh;
     margin-top: 1vh;
     margin-right: 1vw;
@@ -88,12 +90,12 @@
     display: none;
   }
   .sort-text-false {
-    font-size: 1.5vh;
-    border: 1px red solid;
+    font-size: 2vh;
     width: max-content;
     text-align: center;
     margin: auto;
     margin-left: 1vw;
-    color: orange;
+    color: whitesmoke;
+    font-weight: bold;
   }
 }
