--- a/src/cssStyling/TopicsBar.css
+++ b/src/cssStyling/TopicsBar.css
@@ -9,7 +9,7 @@
   width: 100%;
   height: 10vh;
   overflow-x: auto;
-  border-left: orange 1px dashed;
+  border-left: rgb(152, 101, 6) 1px dashed;
   background-color: none;
   padding-bottom: 0;
 }
@@ -23,7 +23,7 @@
 .topic-card {
   border-radius: 10px;
   background-color: whitesmoke;
-  color: darkorange;
+  color: rgb(152, 101, 6);
   font-weight: bolder;
   border: 3px solid var(--primary-color);
   text-align: center;
@@ -33,6 +33,8 @@
   margin: 0.5vh 2vh;
   padding: 1.5vw;
   transition: 0.3s ease-in-out;
+  height: 80%;
+  border: 2px rgb(152, 101, 6) solid;
 }
 .topic-card:hover {
   background-color: orange;
@@ -57,7 +59,7 @@
 
 @media screen and (min-width: 280px) and (max-width: 1080px) {
   .topic-card {
-    margin: 2vh;
-    padding: 3vw;
+    margin: 1vh;
+    padding: 2vw;
   }
 }
