--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Changa:wght@200;300;400;500;600;700;800&family=Manrope:wght@200;800&family=Quattrocento+Sans:ital,wght@0,400;0,700;1,400&display=swap");
 
 :root {
-  background-color: #007cc7;
+  background-color: #e3e7ee;
   font-family: "Changa", sans-serif;
   font-family: "Manrope", sans-serif;
   font-family: "Quattrocento Sans", sans-serif;
@@ -17,7 +17,7 @@ html {
 }
 
 body {
-  color: white;
+  color: #022e51;
   background-color: var(--background-color);
   font-family: var(--font-family);
 }
