--- a/src/cssStyling/SortBar.css
+++ b/src/cssStyling/SortBar.css
@@ -14,7 +14,7 @@
 
 .dropdown > button:hover,
 .sort-div > button:hover {
-  background-color: orange;
+  background-color: #c85a16;
   font-weight: bold;
   transition: 0.3s ease-in-out;
 }
@@ -44,7 +44,7 @@
   border-radius: 3px;
 }
 .sort-option > button:hover {
-  background-color: orange;
+  background-color: rgb(246, 211, 146);
   width: 110%;
   color: black;
 }
@@ -78,7 +78,6 @@
   }
   .sort-toggle {
     display: block;
-    color: whitesmoke;
     font-size: 4vh;
     margin-top: 1vh;
     margin-right: 1vw;
@@ -95,7 +94,7 @@
     text-align: center;
     margin: auto;
     margin-left: 1vw;
-    color: whitesmoke;
+
     font-weight: bold;
   }
 }
