--- a/src/cssStyling/TopicsBar.css
+++ b/src/cssStyling/TopicsBar.css
@@ -9,7 +9,6 @@
   width: 100%;
   height: 10vh;
   overflow-x: auto;
-  border-left: rgb(152, 101, 6) 1px dashed;
   background-color: none;
   padding-bottom: 0;
 }
@@ -21,45 +20,38 @@
 }
 
 .topic-card {
-  border-radius: 10px;
-  background-color: whitesmoke;
-  color: rgb(152, 101, 6);
+  background-color: none;
+  color: #cc6d3d;
   font-weight: bolder;
-  border: 3px solid var(--primary-color);
   text-align: center;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  margin: 0.5vh 2vh;
-  padding: 1.5vw;
+  padding: 1.5vw 5vh;
   transition: 0.3s ease-in-out;
-  height: 80%;
-  border: 2px rgb(152, 101, 6) solid;
+  height: max-content;
 }
 .topic-card:hover {
-  background-color: orange;
-  color: #007cc7;
+  background-color: rgb(246, 211, 146);
 }
 
 .topic-card-link {
   text-decoration: none;
 }
 
-.topic-title > h2 {
+.topic-title > h3 {
   display: flex;
   justify-content: center;
-  width: 90%;
-  margin: 0 5%;
+
   font-size: 8vh;
   margin-top: 2%;
   margin-bottom: 2%;
   transition: 0.3s ease-in-out;
-  color: orange;
+  color: #cc6d3d;
 }
 
 @media screen and (min-width: 280px) and (max-width: 1080px) {
   .topic-card {
-    margin: 1vh;
-    padding: 2vw;
+    height: max-content;
   }
 }
